prevent letter orphan on page title on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1916,6 +1916,7 @@ nav a {
 
 .page-title {
   position: relative;
+  font-size: 2.88rem;
   text-shadow: 2px 1px 1px #222334;
 }
 @media (min-width: 56em) {
